--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
                 <p>Satisfied Customers</p>
             </div>
         </div>
-        <div class="testimonial">
-            <blockquote>"This is the best place to get your <span>website, software or mobile apps developed. Or hiring skilled developers</span>as a team or individual."</blockquote>
-            <cite>Tanjil Ahmed Fahim - CEO, Webermelon</cite>
+        <div class="qoute">
+            <blockquote>"This is the best place to get your <span style="font-weight: bold; color: black;">website, software or mobile apps developed. Or hiring skilled developers</span> as a team or individual."</blockquote>
+            <i style="font-size:24px" class="fa">&#xf10e;</i><br><br>
+            <p><span style="font-weight: bold;">Tanjil Ahmed Fahim</span> <br>- CEO, Webermelon</p>
         </div>
     </section>
 
@@ -145,17 +146,61 @@
         </div>
     </section>
 
+     <!-- Marquee Section -->
+    <section class="marquee">
+        <marquee><ul class="marquee-ul">
+            <li><span>WordPress</span></li> 
+            <li><span>MySql</span></li>
+            <li><span>PHP</span></li>
+            <li><span>BootStrap</span></li>
+            <li><span>MongoDB</span></li>
+            <li><span>JS</span></li>
+            <li><span>Node</span></li>
+            <li><span>AWS</span></li>
+            <li><span>Flutter</span></li>
+            <li><span>Laravel</span></li>
+        </ul>
+    </marquee>
+    </section>
+
 
     <!-- Testimonials Section -->
-    <section class="testimonials-section">
-        <h2>What Our Clients Say</h2>
-        <div class="testimonial">
-            <p>"Amazing service and support!"</p>
-            <h3>Client Name 1</h3>
+    <section class="testimonial-section">
+        <h2>Testimonial</h2>
+        <p>From designs to marketing, Webermelon serves all digital services your business needs to start and be succeeded</p>
+
+        <div class="testimonial-container">
+            <div class="testimonial-card">
+                <img src="pp1.jpg" alt="James Pattinson">
+                <h3>James Pattinson</h3>
+                <p class="position">CEO - StudioTEM</p>
+                <div class="stars">
+                    ★★★★☆
+                </div>
+                <p>
+                    We have worked together during 2 full weeks in order to migrate my ecommerce website towards a new platform. Webermelon also custom coded a full secure platform for my clients in order to improve customer experience after their orders.
+                </p>
+                <a href="#" class="view-review">View review on facebook →</a>
+            </div>
+
+            <div class="testimonial-card">
+                <img src="pp1.jpg" alt="James Pattinson">
+                <h3>James Pattinson</h3>
+                <p class="position">CEO - StudioTEM</p>
+                <div class="stars">
+                    ★★★★☆
+                </div>
+                <p>
+                    We have worked together during 2 full weeks in order to migrate my ecommerce website towards a new platform. Webermelon also custom coded a full secure platform for my clients in order to improve customer experience after their orders.
+                </p>
+                <a href="#" class="view-review">View review on facebook →</a>
+            </div>
         </div>
-        <div class="testimonial">
-            <p>"Helped us achieve success in no time!"</p>
-            <h3>Client Name 2</h3>
+
+        <div class="dots">
+            <span class="active"></span>
+            <span></span>
+            <span></span>
         </div>
     </section>
 
