--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
 
 </head>
 <body>
-
     <!-- Navbar Section -->
     <header class="navbar">
         <div class="logo">
             <img src="webermelon-logo.png" alt="Webermelon Logo">
         </div>
         <nav class="menu">
-            <a href="#">Services</a>
-            <a href="#">Contact us</a>
-            <a href="#">About us</a>
-            <a href="#" class="cta-button">Get Started</a>
+            <div class="nav-links">
+                <a href="#">Services</a>
+                <a href="#">Contact us</a>
+                <a href="#">About us</a>
+            </div>
+            <button class="cta-button">Get Started</button>
         </nav>
-        
     </header>
+
 
     <!-- Hero Section -->
     <section class="hero-section">
@@ -42,39 +43,36 @@
         </div>
     </section>
 
-    <!-- Stats  Section -->
-    <section class="stats-section">
-        <div class="stats">
-            <div class="stat-item">
-                <h2>200<span style="color: #48c465;">+</span></h2>
-                <p>Projects Completed</p>
-            </div>
-            <div class="stat-item">
-                <h2>20<span style="color: #48c465;">+</span></h2>
-                <p>Countries Served</p>
-            </div>
-            <div class="stat-item">
-                <h2>150<span style="color: #48c465;">+</span></h2>
-                <p>Satisfied Customers</p>
-            </div>
+    <!-- Stats and Clients Section -->
+<section class="stats-clients-section">
+    <div class="stats">
+        <div class="stat-item">
+            <h2>200<span style="color: #48c465;">+</span></h2>
+            <p>Projects Completed</p>
         </div>
-        <div class="qoute">
-            <blockquote>"This is the best place to get your <span style="font-weight: bold; color: black;">website, software or mobile apps developed. Or hiring skilled developers</span> as a team or individual."</blockquote>
-            <i style="font-size:24px" class="fa">&#xf10e;</i><br><br>
-            <p><span style="font-weight: bold;">Tanjil Ahmed Fahim</span> <br>- CEO, Webermelon</p>
+        <div class="stat-item">
+            <h2>20<span style="color: #48c465;">+</span></h2>
+            <p>Countries Served</p>
         </div>
-    </section>
+        <div class="stat-item">
+            <h2>150<span style="color: #48c465;">+</span></h2>
+            <p>Satisfied Customers</p>
+        </div>
+    </div>
+    <div class="quote">
+        <blockquote>"This is the best place to get your <span style="font-weight: bold; color: black;">website, software or mobile apps developed. Or hiring skilled developers</span> as a team or individual."</blockquote>
+        <i style="font-size:24px" class="fa">&#xf10e;</i><br><br>
+        <p><span style="font-weight: bold;">Tanjil Ahmed Fahim</span> <br>- CEO, Webermelon</p>
+    </div>
+    <div class="client-logos">
+        <img src="crazygraph.png" alt="Client Crazygraph">
+        <img src="byteeat.png" alt="Client Byteeat">
+        <img src="drobo.png" alt="Client Drobo">
+        <img src="tent.png" alt="Client Tent">
+        <img src="coople.png" alt="Client Coople">
+    </div>
+</section>
 
-    <!-- Clients Section -->
-    <section class="clients-section">
-        <div class="client-logos">
-            <img src="crazygraph.png" alt="Client Crazygraph">
-            <img src="byteeat.png" alt="Client Byteeat">
-            <img src="drobo.png" alt="Client Drobo">
-            <img src="tent.png" alt="Client Tent">
-            <img src="coople.png" alt="Client Coople">
-        </div>
-    </section>
 
 <!-- Service Section -->
 <section class="services-section">
