--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         </div>
     </div>
     <div class="quote">
-        <blockquote>"This is the best place to get your <span style="font-weight: bold; color: black;">website, software or mobile apps developed. Or hiring skilled developers</span> as a team or individual."</blockquote>
+        <blockquote>"This is the best place to get your <span style="font-weight: bold; color: black;">website, software or mobile apps developed. Or hiring skilled developers</span> as a team or individual."</blockquote> <br>
         <i style="font-size:24px" class="fa">&#xf10e;</i><br><br>
-        <p><span style="font-weight: bold;">Tanjil Ahmed Fahim</span> <br>- CEO, Webermelon</p>
+        <p><span style="font-weight: bold; color: black;">Tanjil Ahmed Fahim</span> <br>- CEO, Webermelon</p>
     </div>
     <div class="client-logos">
         <img src="crazygraph.png" alt="Client Crazygraph">
